<resources>
    <string name="app_name">thoang-sizeBook</string>
    <string name="heading">Record (Name: Bust, Chest, Waist, Inseam)</string>
    <string name="prompt">Enter a Name:</string>
    <string name="add">Add</string>
    <string name="display">Detail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="fieldPrompt">Field to Edit</string>
    <string name="sizePrompt">Size</string>
    <string name="detail">Record Details</string>
    <string name="back">Back</string>

    <!-- Used for spinner -->
    <string-array name="dataFields">
        <item>Date</item>
        <item>Neck</item>
        <item>Bust</item>
        <item>Chest</item>
        <item>Waist</item>
        <item>Hip</item>
        <item>Inseam</item>
        <item>Comment</item>
    </string-array>
</resources>
