<?xml version="1.0" encoding="utf-8"?>

<!-- Displays the main UI that user sees -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Lists records stored -->
    <TextView
        android:id="@+id/heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading" />

    <ListView
        android:id="@+id/recordList"
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

    </ListView>

    <!-- Prompt and input field for name -->
    <TextView
        android:id="@+id/prompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt" />

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"/>

    <!-- Add, Display, Delete buttons on one line -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

         <Button
            android:id="@+id/Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
            android:text="@string/add" />

        <Button
            android:id="@+id/Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/display" />

        <Button
            android:id="@+id/Delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/delete" />
    </RelativeLayout>

    <!-- Prompts on one line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/fieldPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fieldPrompt" />

        <TextView
            android:id="@+id/sizePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/sizePrompt" />
    </RelativeLayout>

    <!-- Edit button and its data input fields aligned on one line -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/edit" />

        <EditText
            android:id="@+id/field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scrollbars="horizontal"/>

        <EditText
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:scrollbars="horizontal"/>
    </RelativeLayout>
</LinearLayout>